themes/surveysolutions/static/css/all.css
/* ... */
.footer {
  height: 270px;
  background-color: #f1f2f3;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
}




.container{
  max-width: 1160px;
}
/* Custom page CSS
-------------------------------------------------- */
@font-face {
  font-family: 'RobotoBold';
  src: url('../fonts/RobotoBold.woff2') format('woff2'),
       url('../fonts/RobotoBold.woff') format('woff'),
       url('../fonts/RobotoBold.ttf') format('truetype'),
       url('../fonts/RobotoBold.svg#RobotoBold') format('svg');
}
@font-face {
  font-family: 'RobotoLight';
  src: url('../fonts/RobotoLight.woff2') format('woff2'),
       url('../fonts/RobotoLight.woff') format('woff'),
       url('../fonts/RobotoLight.ttf') format('truetype'),
       url('../fonts/RobotoLight.svg#RobotoLight') format('svg');
}
@font-face {
  font-family: 'RobotoRegular';
  src: url('../fonts/RobotoRegular.woff2') format('woff2'),
       url('../fonts/RobotoRegular.woff') format('woff'),
       url('../fonts/RobotoRegular.ttf') format('truetype'),
       url('../fonts/RobotoRegular.svg#RobotoRegular') format('svg');
}
.btn-search span,
.tutorials,
.img-container:before{
  -webkit-transition: all 0.2s linear;
  -moz-transition: all 0.2s linear;
  -ms-transition: all 0.2s linear;
  -o-transition: all 0.2s linear;
  transition: all 0.2s linear;
}
header{
  background: url("../img/small-header.jpg"), #B0C4DE no-repeat 100% 420px;
  background: url("../img/small-header.jpg") no-repeat 0 0, -webkit-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/small-header.jpg") no-repeat 0 0, -moz-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/small-header.jpg") no-repeat 0 0, -ms-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/small-header.jpg") no-repeat 0 0, -o-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/small-header.jpg") no-repeat 0 0, linear-gradient(to right, #B0C4DE, #B0C4DE) no-repeat;
  background-repeat: no-repeat;
  background-position: top center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}
.index-page header{
  background: url("../img/header.jpg"), #B0C4DE no-repeat 100% 420px;
  background: url("../img/header.jpg") no-repeat 0 0, -webkit-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/header.jpg") no-repeat 0 0, -moz-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/header.jpg") no-repeat 0 0, -ms-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/header.jpg") no-repeat 0 0, -o-linear-gradient(left, #B0C4DE, #B0C4DE) no-repeat;
  background: url("../img/header.jpg") no-repeat 0 0, linear-gradient(to right, #B0C4DE, #B0C4DE) no-repeat;
  background-size: 100% 100%;
  padding: 180px 0 60px;
  margin-bottom: 40px;
  background-position: center center;
  background-size: cover;
}
.index-page .navbar-brand{
  font-size: 27px;
  line-height: 29px;
}
.index-page .navbar-text {
  font: 28px/30px "RobotoLight";
  max-width: 245px;
  border: none;
}
.navbar-brand{
  font: 22px/24px "RobotoBold";
  letter-spacing: 1px;
}
.navbar-text {
  font: 20px/22px "RobotoLight";
  max-width: 200px;
  border-left: 1px solid #fff;
}
.index-page .form-inline .search{
  width: 740px;
}
.form-inline .search{
  width: 550px;
  background: -moz-linear-gradient(to right, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 1) 100%);
  background: -webkit-linear-gradient(to right, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 1) 100%);
  background: linear-gradient(to right, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 1) 100%);
  border-radius: 7px;
}
.search input{
  border: none;
  border-radius: 7px;
  background: transparent;
  font: 16px/18px "RobotoBold";
  padding: 5px 0px 5px 20px;
  letter-spacing: 1.2px;
  box-shadow: none;
  height: 60px;
  display: inline-block;
  color: #003550;
}
.search input::placeholder{
	color: #003550;
	letter-spacing: 1.2px;
}
.btn-search{
  background-color: transparent;
  border-color: transparent;
  border-top-right-radius: 7px;
  border-bottom-right-radius: 7px;
  padding: 0 15px;
}
.btn-search span{
  vertical-align: middle;
  display: inline-block;
  background-image: url("../img/Search_button.png") !important;
  background-repeat: no-repeat;
  opacity: 0.3;
  width: 26px;
  height: 26px;

}
.btn-search:hover span, .btn-search:focus span, .btn-search:active span{
  opacity: 1;
}
.algolia-autocomplete{
  flex-grow: 1;
  align-items: stretch;
}
.form-inline .search .form-control{
  width: 100%;
}
.algolia-autocomplete .aa-hint {
  color: #999;
}
.algolia-autocomplete .aa-dropdown-menu{
  background-color: #fff;
  width: 100%;
  border-radius: 0.25rem;
  margin-top: 7px;
  padding: 0;
  border: 1px solid #81ACD9;
}
.algolia-autocomplete .aa-dropdown-menu strong{
  background-color: rgba(255, 255, 224, 0.6);
}
.algolia-autocomplete .aa-dropdown-menu .aa-suggestion {
  cursor: pointer;
}
.search-result-block:active,
.search-result-block:hover,
.search-result-block:focus{
  background-color: rgb(231, 231, 231);
}
.algolia-autocomplete .aa-dropdown-menu .aa-suggestion.aa-cursor {
  background-color: rgb(231, 231, 231);;
}
.section-name.interviewer{
  background-color: #17a2b8;
}

.section-name.headquarters{
  background-color: #28a745;
}

.section-name.supervisor{
  background-color: #ffc107;
}

.section-name.questionnaire-designer{
  background-color: #81ACD9;
}

.section-name{
  font-size: 10px;
  line-height: 12px;
  background-color: #6c757d;
}
.short-summary{
  overflow: hidden;
  text-overflow: ellipsis;
  max-height: 32px;
}
.aa-dropdown-menu em{
  background-color: #B0C4DE;
}
.branding {
  font-size: 0.8em;
  margin: 0.4em 0.2em;
}
.branding img {
  height: 0.8em;
  margin-bottom: - 0.3em;
}


/* end search */ 

.information-block {
  position: absolute;
  top: 30px;
  right: 0;
  min-width: 400px;

  font: 16px/18px "RobotoRegular";
}
/* ... */

